--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
@@ -8,4 +8,44 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
-</html>
+</html> -->
+
+
+<nav class="navbar">
+  <div class="navbar-wrapper">
+    <h3 class="brand">bookup</h3>
+
+    <form action="/logout">
+      <button class="navbar-button nabvar-button-right">Logout</button>
+    </form>
+    <button type="submit" class="navbar-button navbar-button-left">Profile</button>
+  </div>
+</nav>
+<div class="container">
+  <h3 class="home-message">Regarding for a new lecture?</h3>
+  <div class="messages-home-box">
+    <p>Messages</p>
+  </div>
+  <div class="option-container">
+    <div class="option-box option-left">
+      <!-- <img src="" alt="books" /> -->
+      <p>My Books</p>
+    </div>
+    <div class="option-box option-right">
+      <p>Books Available In Your City</p>
+    </div>
+    <div class="option-box option-left">
+      <p>All Books</p>
+    </div>
+    <div class="option-box option-right">
+      <p>Add Book</p>
+    </div>
+  </div>
+
+</div>
+<footer class="footer">
+  <div class="footer-wrapper">
+    <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
+    <p class="footer-quote-author">Henry Miller</p>
+  </div>
+</footer>
