--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -58,7 +58,7 @@
           <input type="text" name="gender" id="gender" value="<%= user.gender %>">
 
           <label for="image-url">Image URL</label>
-          <input type="text" name="imageUrl" id="image-url" value="<%= product.imageUrl %>">
+          <input type="text" name="imageUrl" id="image-url" value="<%= user.picture %>">
 
           <button type="submit">Edit Profile/button>
     </form>
