add routes and views

--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -1,29 +1,35 @@
-
 <nav class="navbar">
   <div class="navbar-wrapper">
     <h3 class="brand">bookup</h3>
       <a href="/logout" class="navbar-button nabvar-button-right">Logout</a>
-      <a href="/profile" class="navbar-button navbar-button-left">Profile</a>
+      <a href="/" class="navbar-button navbar-button-left">Home</a>
   </div>
 </nav>
+
 <div class="container">
-  <h3 class="home-message">Regarding for a new lecture?</h3>
-  <div class="messages-home-box">
-    <p>Messages</p>
-  </div>
-  <div class="option-container">
-    <div class="option-box option-right">
-      <p>Books Available In Your City</p>
+
+  <h2>All the books</h2>
+
+  <div class="mybooks-wrapper">
+
+    <div class="mybooks">
+      <div class="cover-wrapper">
+        <!-- here goes the cover -->
+      </div>
+      <div class="book-list-info">
+        <ul>
+          <li>Title</li>
+          <li>Author</li>
+          <li>Genre</li>
+          <li>Pages</li>
+        </ul>
+      </div>
     </div>
-    <div class="option-box option-left">
-      <p>All Books</p>
-    </div>
-    <div class="option-box option-right">
-      <p>Add Book</p>
-    </div>
+
   </div>
 
 </div>
+
 <footer class="footer">
   <div class="footer-wrapper">
     <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
