--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,10 +58,11 @@ navbar-wrapper:after {
   font-size: 14px;
   color: #fff;
   background: #282828;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  border-bottom: none;
+  border: none;
+  padding-top: 25px;
+  box-sizing: border-box;
+  text-decoration: none;
+  text-align: center;
   cursor: pointer;
   outline: none;
 }
@@ -280,6 +281,132 @@ body {
   outline-width: 2px;
   color: #666;
   resize: none;
+}
+
+/*----------------------PROFILE---------------------*/
+
+.profile-wrapper {
+  width: 90%;
+  margin-top: 20px;
+}
+
+.profile-wrapper:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.profile-picture-wrapper {
+  width: 150px;
+  height: 150px;
+  background: rgba(255, 255, 255, 0.3);
+  border: 2px solid #7fc857;
+  margin: 15px;
+  border-radius: 4px 4px 4px 4px;
+  float: left;
+  box-sizing: border-box;
+}
+
+.profile-picture {
+  width: 95%;
+  height: 95%;
+}
+
+.profile-data-wrapper {
+  min-height: 150px;
+  width: 60%;
+  margin-top: 15px;
+  /*background: #eee;*/
+  padding: 20px 20px 20px 20px;
+  border-radius: 4px 4px 4px 4px;
+  box-sizing: border-box;
+  float: left;
+}
+
+.profile-data-wrapper ul {
+  list-style-type: none;
+}
+
+.profile-data-wrapper li {
+  width: 100%;
+  font-size: 16px;
+  margin-top: 10px;
+  padding-bottom: 5px;
+  border-bottom: 1px dashed #aaa;
+}
+
+.edit-profile-button {
+  height: 30px;
+  widht: 100px;
+  background: #7fc857;
+  border: 2px solid #fff;
+  padding: 7px;
+  border-radius: 4px 4px 4px 4px;
+  color: #fff;
+  text-decoration: none;
+  margin-top: 100px;
+  margin-left: 50px;
+  /*margin-bottom: 20px;*/
+  font-size: 14px;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.edit-profile-button:hover {
+  background: none;
+  color: #7fc857;
+  border: 2px solid #7fc857;
+}
+
+/*---------------MY BOOKS INSIDE PROFILE---------------*/
+
+.mybooks-wrapper {
+  width: 100%;
+  margin: 20px auto;
+  border-top: 2px solid #666;
+  padding-top: 20px;
+}
+
+.mybooks {
+  width: 96%;
+  height: auto;
+  margin: 0 auto;
+  background: rgba(240, 240, 240, 0.6);
+  border-radius: 6px 6px 6px 6px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.mybooks:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.cover-wrapper {
+  width: 100px;
+  height: 100px;
+  background: #eee;
+  float: left;
+}
+
+.book-list-info ul {
+  list-style-type: none;
+  margin-top: 5px;
+  margin-left: 15px;
+  padding-left: 20px;
+  float: left;
+}
+
+.book-list-info li {
+  width: 100%;
+  font-size: 16px;
+  margin-bottom: 5px;
+  /*border-bottom: 1px dashed #aaa;*/
+}
+
+.book-list-info li span {
+  margin-right: 20px;
 }
 
 /*--------------MEDIA QUERIES------------*/
