--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,21 +12,25 @@
     <p>Messages</p>
   </div>
   <div class="option-container">
-    <div class="option-box option-right">
+    <!-- <div class="option-box option-right">
       <p>Books Available In Your City</p>
-    </div>
-    <div class="option-box option-left">
+    </div> -->
+    <a href="/available-books" class="option-box option-right">
+      Books Available In Your City
+    </a>
+    <!-- <div class="option-box option-left">
       <p>All Books</p>
-    </div>
-    <div class="option-box option-right">
-      <p>Add Book</p>
-    </div>
+    </div> -->
+    <a href="/all-books" class="option-box option-left">
+      All Books
+    </a>
   </div>
 
 </div>
-<footer class="footer">
+
+<!-- <footer class="footer">
   <div class="footer-wrapper">
     <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
     <p class="footer-quote-author">Henry Miller</p>
   </div>
-</footer>
+</footer> -->
