--- a/views/editprofile.ejs
+++ b/views/editprofile.ejs
@@ -10,7 +10,7 @@
   <div class="form-wrapper">
     <form action="/signup" method="POST" id="login-form">
 
-        <h3 class="new-account-header">Modify it and save</h3>
+        <h3 class="new-account-header">Edit your profile</h3>
         <div class="form-group">
           <input type="text" class="basic-form" name="username" placeholder="username">
           <input type="text" class="basic-form" name="email" placeholder="myemail@email.com">
@@ -26,9 +26,10 @@
   </div>
 
 </div>
-<footer class="footer">
+
+<!-- <footer class="footer">
   <div class="footer-wrapper">
     <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
     <p class="footer-quote-author">Henry Miller</p>
   </div>
-</footer>
+</footer> -->
