--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,7 +7,7 @@
 </nav>
 <div class="container">
 
-  <a class="edit-profile-button" href="/edit-profile">Edit Profile</a>
+
   <div class="profile-wrapper">
 
     <div class="profile-picture-wrapper">
@@ -15,36 +15,98 @@
     </div>
     <div class="profile-data-wrapper">
       <ul>
-        <li>Name</li>
-        <li>City</li>
-        <li>email@email.com</li>
+        <li>Wilfredo Vargas</li>
+        <li>La Havana</li>
+        <li>aquiestawilfredo@email.com</li>
+        <li>689 563 285</li>
+
       </ul>
     </div>
+
   </div>
 
+  <a class="edit-profile-button" href="/edit-profile">Edit Profile</a>
+
   <div class="mybooks-wrapper">
-    <div class="mybooks">
+
+    <div class="mybooks new">
       <div class="cover-wrapper">
+        <!-- class="cover" -->
         <!-- here goes the cover -->
       </div>
       <div class="book-list-info">
         <ul>
-          <li>Title</li>
-          <li>Author</li>
-          <li>Genre</li>
-          <li>Pages</li>
-          <li><span><a href="/edit-book">Edit</a></span><span><a href="#">Delete</a></span></li>
+          <br>
+          <li>Add a New Book</li>
         </ul>
       </div>
     </div>
+
+    <div class="mybooks">
+      <div class="cover-wrapper">
+        <!-- class="cover" -->
+        <!-- here goes the cover -->
+      </div>
+      <div class="book-list-info">
+        <ul>
+          <li>Book Title</li>
+          <li>Author of the Book</li>
+          <!-- <li>Genre</li>
+          <li>Pages</li> -->
+        </ul>
+        <div class="book-options">
+          <a href="/edit-book">Edit</a>
+          <a href="#">Delete</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="mybooks">
+      <div class="cover-wrapper">
+        <!-- class="cover" -->
+        <!-- here goes the cover -->
+      </div>
+      <div class="book-list-info">
+        <ul>
+          <li>Book Title</li>
+          <li>Author of the Book</li>
+          <!-- <li>Genre</li>
+          <li>Pages</li> -->
+        </ul>
+        <div class="book-options">
+          <a href="/edit-book">Edit</a>
+          <a href="#">Delete</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="mybooks">
+      <div class="cover-wrapper">
+        <!-- class="cover" -->
+        <!-- here goes the cover -->
+      </div>
+      <div class="book-list-info">
+        <ul>
+          <li>Book Title</li>
+          <li>Author of the Book</li>
+          <!-- <li>Genre</li>
+          <li>Pages</li> -->
+        </ul>
+        <div class="book-options">
+          <a href="/edit-book">Edit</a>
+          <a href="#">Delete</a>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
 </div>
 
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="footer-wrapper">
     <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
     <p class="footer-quote-author">Henry Miller</p>
   </div>
-</footer>
+</footer> -->
