--- a/views/availablebooks.ejs
+++ b/views/availablebooks.ejs
@@ -2,13 +2,37 @@
   <div class="navbar-wrapper">
     <h3 class="brand">bookup</h3>
       <a href="/logout" class="navbar-button nabvar-button-right">Logout</a>
-      <a href="/" class="navbar-button navbar-button-left">Home</a>
+      <!-- <a href="/" class="navbar-button navbar-button-left">Home</a> -->
   </div>
 </nav>
 
 <div class="container">
 
-  <h2>Available books</h2>
+  <div class="profile-wrapper">
+
+    <div class="profile-picture-wrapper">
+      <!-- here goes the profile picture -->
+    </div>
+    <div class="profile-data-wrapper">
+      <ul>
+        <li>Wilfredo Vargas</li>
+        <li>La Havana</li>
+        <li>aquiestawilfredo@email.com</li>
+        <li>689 563 285</li>
+
+      </ul>
+    </div>
+
+  </div>
+
+  <a class="edit-profile-button" href="/edit-profile">Edit Profile</a>
+
+  <nav class="books-navbar">
+    <a href="/">My Books</a>
+    <a href="/all-books">All Books</a>
+    <a href="/available-books">Available Books</a>
+    <a href="/messages">Messages</a>
+  </nav>
 
   <div class="mybooks-wrapper">
 
