--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -1,12 +1,12 @@
 <nav class="navbar">
   <div class="navbar-wrapper">
     <h3 class="brand">bookup</h3>
-      <a href="/logout" class="navbar-button nabvar-button-right">Logout</a>
-      <!-- <a href="/" class="navbar-button navbar-button-left">Home</a> -->
+    <a href="/logout" class="navbar-button nabvar-button-right">Logout</a>
+    <!-- <a href="/" class="navbar-button navbar-button-left">Home</a> -->
   </div>
 </nav>
-
 <div class="container">
+
 
   <div class="profile-wrapper">
 
@@ -36,21 +36,31 @@
 
   <div class="mybooks-wrapper">
 
-    <div class="mybooks">
-      <div class="cover-wrapper">
-        <!-- here goes the cover -->
-      </div>
-      <div class="book-list-info">
-        <ul>
-          <li>Title</li>
-          <li>Author</li>
-        </ul>
-      </div>
+    <div class="form-wrapper">
+      <form action="/signup" method="POST" id="login-form">
+
+          <h3 class="new-account-header">Add your book</h3>
+          <div class="form-group">
+            <input type="text" class="basic-form" name="title" placeholder="title">
+            <input type="text" class="basic-form" name="author" placeholder="author">
+            <input type="text" class="basic-form" name="genre" placeholder="genre">
+            <input type="text" class="basic-form" name="city" placeholder="city">
+            <input type="text" class="basic-form" name="pages" placeholder="pages">
+            <textarea class="description-form" name="name" >description</textarea>
+            <div class="add-file">
+              <label for="cover">Upload a cover</label>
+              <input type="file" class="upload" id="cover" name="cover">
+            </div>
+
+
+          </div>
+          <button type="button" class="send-button">Save</button>
+
+      </form>
+
     </div>
 
   </div>
-
-</div>
 
 <!-- <footer class="footer">
   <div class="footer-wrapper">
