add new book and list all books functionality added

--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -60,7 +60,7 @@
           <label for="image-url">Image URL</label>
           <input type="text" name="imageUrl" id="image-url" value="<%= user.picture %>">
 
-          <button type="submit">Edit Profile/button>
+          <button type="submit">Edit Profile</button>
     </form>
 
 
