add partial crud of users and books

--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -44,14 +44,12 @@
             <input type="text" class="basic-form" name="title" placeholder="title">
             <input type="text" class="basic-form" name="author" placeholder="author">
             <input type="text" class="basic-form" name="genre" placeholder="genre">
-            <input type="text" class="basic-form" name="city" placeholder="city">
             <input type="text" class="basic-form" name="pages" placeholder="pages">
-            <textarea class="description-form" name="name" >description</textarea>
+            <textarea class="description-form" name="description" >description</textarea>
             <div class="add-file">
               <label for="cover">Upload a cover</label>
               <input type="file" class="upload" id="cover" name="cover">
             </div>
-
 
           </div>
           <button type="button" class="send-button">Save</button>
