--- a/views/allbooks.ejs
+++ b/views/allbooks.ejs
@@ -10,6 +10,7 @@
 
   <div class="profile-wrapper">
 
+
     <div class="profile-picture-wrapper">
       <!-- here goes the profile picture -->
     </div>
@@ -35,19 +36,20 @@
   </nav>
 
   <div class="mybooks-wrapper">
-
+<!-- <% book.forEach( (book) => { %> -->
     <div class="mybooks">
       <div class="cover-wrapper">
         <!-- here goes the cover -->
       </div>
       <div class="book-list-info">
         <ul>
-          <li>Title</li>
-          <li>Author</li>
+          <!-- <li><%= book.title %></li>
+          <li><%= book.author %></li> -->
+          <!-- <a href="/book/<%= book._id %>">show</a> -->
         </ul>
       </div>
     </div>
-
+<!-- <% }); %> -->
   </div>
 
 </div>
