--- a/views/auth/allbooks_imre.ejs
+++ b/views/auth/allbooks_imre.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<!-- <nav class="navbar">
   <div class="navbar-wrapper">
     <h3 class="brand">bookup books</h3>
   </div>
@@ -15,7 +15,7 @@
       <% book.forEach( (book) => { %>
         <li><%= book.title %> - <%= book.author %> | <a href="/book/<%= book._id %>">show</a> |
           <%})%>
-    </ul>
+    </ul> -->
 
     <!-- <h1><%= book.title %></h1>
     <h2><%= book.author %></h2>
@@ -49,10 +49,10 @@
 
 </div> -->
 
-</div>
+<!-- </div>
 <footer class="footer">
 <div class="footer-wrapper">
   <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
   <p class="footer-quote-author">Henry Miller</p>
 </div>
-</footer>
+</footer> -->
