--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,14 @@
     </div>
     <div class="profile-data-wrapper">
       <ul>
-        <li>Wilfredo Vargas</li>
-        <li>La Havana</li>
-        <li>aquiestawilfredo@email.com</li>
-        <li>689 563 285</li>
+        <li><%= user.username %></li>
+        <li><%= user.city %></li>
+        <li><%= user.email %></li>
+        <li><%= user.phone %></li>
+        <li><%= user.province %></li>
+        <li><%= user.country %></li>
+        <li><%= user.age %></li>
+        <li><%= user.gender %></li>
 
       </ul>
     </div>
