--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -1,12 +1,4 @@
 
-<nav class="navbar">
-  <div class="navbar-wrapper">
-    <h3 class="brand">bookup</h3>
-  </div>
-</nav>
-<div class="login-container">
-  <div class="form-wrapper">
-
 
     <!-- <form action="/signup" method="POST" id="form-container">
       <label for="username">Username</label>
@@ -27,7 +19,7 @@
         <a href="/login">Login</a>
       </p>
     </form> -->
-
+<!--
 
     <h2 class="welcome-message">Share your books and meet other readers</h2>
     <form action="/profile" method="POST" id="profile-form">
@@ -68,10 +60,4 @@
 
   </div>
 
-</div>
-<footer class="footer">
-  <div class="footer-wrapper">
-    <p class="footer-quote">“A book lying idle on a shelf is wasted ammunition. Like money, books must be kept in constant circulation... A book is not only a friend, it makes friends for you. When you have possessed a book with mind and spirit, you are enriched. But when you pass it on you are enriched threefold.”</p>
-    <p class="footer-quote-author">Henry Miller</p>
-  </div>
-</footer>
+</div> -->
